# langchain-xiao

./: README.md  pyproject.toml  requirements.txt
langchain_xiao/chat_models/: __init__.py  baichuan.py  cyou.py  hunyuan.py  llamacpp.py  tongyi.py  utils.py
langchain_xiao/embeddings/: __init__.py  xinference.py
langchain_xiao/llms/: gpt4all.py  utils.py
langchain_xiao/retrievers/document_compressors/: __init__.py  fastllm_rerank.py  xinference_rerank.py
tests/: chat_models_utils.py  fastllm_embeddings.py  fastllm_rerank.py  llms_utils.py  xinference_embeddings.py  xinference_rerank.py
xiao_langchain/chat_models/: utils.py
xiao_langchain/embeddings/: fastllm.py
xiao_langchain/llms/: __init__.py  utils.py
xiao_langchain/retrievers/document_compressors/: __init__.py
