[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "xiao-langchain"
authors = [
    {name = "xiaojinli", email = "553555614@qq.com"},
]
description = "langchain extension"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["langchain"]
license = {text = "MIT"}
classifiers = [
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "langchain-core>=0.1.45",
    "langchain-community>=0.0.34",
    "pydantic<=1.10.15",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/xiaojinlii/xiao-langchain/blob/main/README.md"
Source = "https://github.com/xiaojinlii/xiao-langchain"

[tool.setuptools]
packages = ["langchain_xiao"]

[tool.setuptools.dynamic]
version = {attr = "langchain_xiao.__version__"}